--- a/contact us.html
+++ b/contact us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,8 +30,8 @@
         <div id="I2"><h1>feedback</h1></div>
         <div id="jj"> 
             <form>
-            <label for="full name" id="fullname" >Full name:</label>
-            <input type="text" id="fullname" placeholder="full name">
+            <label for="full name" id="fullname"  >Full name:</label>
+            <input type="text" id="fullname" placeholder="full name" class="leb">
             <br>
             <br>
             <label for="Email" id="Email" >E-mail:</label>
@@ -40,7 +40,7 @@
             <br>
             <div id="I1"><label for="feedback" id="feedback" >feedback:</label></div>
             <textarea name="feedback" id="feedback" cols="100" rows="10"></textarea>
-            <span><input type="submit" name="envoyer" id="E1"></span>
+            <span><input type="submit" name="envoyer" id="E1" class="button"></span>
         </div>
 
         </form>
